<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/sort_author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_author"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/sort_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_title"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sort_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_date"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sort_website"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_website"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sort_tag"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_tag"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sort_read"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_contents"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>

