<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/news_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:textAllCaps="true"
                android:textSize="12sp"
                tools:text="@string/author" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="right"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center_vertical"
                android:textSize="10sp"
                tools:text="@string/date" />

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-serif"
            android:textSize="16sp"
            tools:text="@string/title" />


    </LinearLayout>

</LinearLayout>